--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,21 @@
-server:
-  port: 8080
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ql_boot?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/template?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: password
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   redis:
     host: localhost
     port: 6379
     password: password
-
-  profiles:
-    active: dev
 
 mybatis-plus:
   global-config:
     db-config:
       id-type: auto
 
+# https://sa-token.cc/
 sa-token:
   token-name: Authorization
   token-style: random-128
